# MA661E

./: README.md  pyproject.toml
Submission/: story.pptx  story_vis.twb
data/: processed_daily_avg_turbine_data.csv  processed_hourly_avg_turbine_data.csv  stockreturns.mat
labs/: wind_power_forecasting.ipynb
notebooks/: Tutorial_T1_DataPreparation.ipynb  course_work.ipynb  lab.ipynb  spectral.ipynb
