[tool.poetry]
name = "ma661e"
version = "0.1.0"
description = ""
authors = ["Nigel Grech <nigelgrech.ng@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.7.3"
pandas = "^1.4.0"
researchpy = "^0.3.2"
statsmodels = "^0.13.1"
jupyter = "^1.0.0"
plotly = "^5.5.0"
factor_analyzer = "^0.4.0"
matplotlib = "^3.5.1"
scikit-dimension = "^0.3"
numba = "^0.55.1"
numpy = "1.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
